--- a/readme/tdd-001.md
+++ b/readme/tdd-001.md
@@ -4,12 +4,37 @@ Objective: write an Angular project in Test Driven Development
 
 1. angular mocha chai nyc
 
-### [Setup Angular Project with Angular CLI](https://www.geeksforgeeks.org/angular-cli-angular-project-setup/)
+## Reference
 
-### [Unit Testing with Mocha and Chai [Part 1/2]](https://www.youtube.com/watch?v=k4GFqgBR2qc)
+#### [Unit Testing with Mocha and Chai [Part 1/2]](https://www.youtube.com/watch?v=k4GFqgBR2qc)
 
-### [Mocha/Chai with TypeScript](https://dev.to/matteobruni/mocha-chai-with-typescript-37f)
+### Comparison of Testing Framework
 
-### [Mocha vs Karma vs Jasmine. What to use when?](https://www.educative.io/answers/mocha-vs-karma-vs-jasmine-what-to-use-when)
-  
-### [Comparison between Selenium, Protractor, Cypress, and WebdriverIO](https://sahil-goyal2.medium.com/comparison-between-selenium-protractor-cypress-and-webdriverio-7786fc90ee09)
+#### [Mocha/Chai with TypeScript](https://dev.to/matteobruni/mocha-chai-with-typescript-37f)
+
+#### [Mocha vs Karma vs Jasmine. What to use when?](https://www.educative.io/answers/mocha-vs-karma-vs-jasmine-what-to-use-when)
+
+#### [Comparison between Selenium, Protractor, Cypress, and WebdriverIO](https://sahil-goyal2.medium.com/comparison-between-selenium-protractor-cypress-and-webdriverio-7786fc90ee09)
+
+### Angular Version
+
+#### [run multiple Node and Angular versions simultaneously](https://dev.to/patricepeartree/how-to-run-multiple-node-and-angular-versions-simultaneously-3lfj)
+
+#### [Version compatibility](https://angular.io/guide/versions)
+
+
+### NVM 
+
+
+## Cookbook
+- `node -v`
+- `npm -v`
+
+### [reinstall nvm under C:/nvm instead the default](https://www.freecodecamp.org/news/nvm-for-windows-how-to-download-and-install-node-version-manager-in-windows-10/#followthestepsbelowtodownloadnvmwindows)
+
+- `nvm install v18.12.0`
+- `nvm use 18.12.0`
+
+#### [Setup Angular Project with Angular CLI](https://www.geeksforgeeks.org/angular-cli-angular-project-setup/)
+- `npm i -d @angular/cli`
+- `ng new learn-angular-tdd`
