--- a/readme/tdd-001.md
+++ b/readme/tdd-001.md
@@ -37,4 +37,8 @@ Objective: write an Angular project in Test Driven Development
 
 #### [Setup Angular Project with Angular CLI](https://www.geeksforgeeks.org/angular-cli-angular-project-setup/)
 - `npm i -d @angular/cli`
-- `ng new learn-angular-tdd`
+
+- `cd /c/opt/02-learn`
+- `git clone https://github.com/eric-el-tan/learn-angular-tdd.git` 
+- `ng new learn-angular-tdd` generate new angular project into the same folder
+-
