--- a/readme/tdd-001.md
+++ b/readme/tdd-001.md
@@ -6,39 +6,48 @@ Objective: write an Angular project in Test Driven Development
 
 ## Reference
 
-#### [Unit Testing with Mocha and Chai [Part 1/2]](https://www.youtube.com/watch?v=k4GFqgBR2qc)
-
-### Comparison of Testing Framework
-
-#### [Mocha/Chai with TypeScript](https://dev.to/matteobruni/mocha-chai-with-typescript-37f)
-
-#### [Mocha vs Karma vs Jasmine. What to use when?](https://www.educative.io/answers/mocha-vs-karma-vs-jasmine-what-to-use-when)
-
-#### [Comparison between Selenium, Protractor, Cypress, and WebdriverIO](https://sahil-goyal2.medium.com/comparison-between-selenium-protractor-cypress-and-webdriverio-7786fc90ee09)
-
 ### Angular Version
 
 #### [run multiple Node and Angular versions simultaneously](https://dev.to/patricepeartree/how-to-run-multiple-node-and-angular-versions-simultaneously-3lfj)
-
-#### [Version compatibility](https://angular.io/guide/versions)
-
-
-### NVM 
 
 
 ## Cookbook
 - `node -v`
 - `npm -v`
 
+### NVM 
 ### [reinstall nvm under C:/nvm instead the default](https://www.freecodecamp.org/news/nvm-for-windows-how-to-download-and-install-node-version-manager-in-windows-10/#followthestepsbelowtodownloadnvmwindows)
+#### [Version compatibility](https://angular.io/guide/versions)
 
-- `nvm install v18.12.0`
-- `nvm use 18.12.0`
+- `nvm install v16.14.2` for angular 14 for mocha chai
+- `nvm use 16.14.2`
 
 #### [Setup Angular Project with Angular CLI](https://www.geeksforgeeks.org/angular-cli-angular-project-setup/)
-- `npm i -d @angular/cli`
+
+### [generate Angular application in a specific version using ng new command](https://frontbackend.com/angular/how-to-generate-angular-application-in-a-specific-version-using-ng-new-command)
+- `npm uninstall -g @angular/cli`
+- `npm install -g @angular/cli@14` -> 14.2.11
 
 - `cd /c/opt/02-learn`
 - `git clone https://github.com/eric-el-tan/learn-angular-tdd.git` 
 - `ng new learn-angular-tdd` generate new angular project into the same folder
--
+
+#### [Unit Testing with Mocha and Chai [Part 1/2]](https://www.youtube.com/watch?v=k4GFqgBR2qc)
+- `npm install chai mocha ts-node @types/chai @types/mocha --save-dev`
+
+- mocha require angular 14.18
+
+
+### Comparison of Testing Framework
+
+#### [Mocha/Chai with TypeScript](https://dev.to/matteobruni/mocha-chai-with-typescript-37f)
+- `npm install chai mocha ts-node @types/chai @types/mocha --save-dev`
+
+### package.json
+- add `"test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'"`
+
+
+#### [Mocha vs Karma vs Jasmine. What to use when?](https://www.educative.io/answers/mocha-vs-karma-vs-jasmine-what-to-use-when)
+
+#### [Comparison between Selenium, Protractor, Cypress, and WebdriverIO](https://sahil-goyal2.medium.com/comparison-between-selenium-protractor-cypress-and-webdriverio-7786fc90ee09)
+
